# alternative-data

./: .gitignore  AGENTS.md  CLAUDE.md  PROJECT_MAP.md  README.md  adata-edm-snapshot.md  adata-report-snapshot.md  antigravity_check.txt  market-watch-initial.md  pyproject.toml  render.yaml  requirements-dashboard.txt  requirements.txt
.agents/workflows/: clean-git-configs.md  git-push.md
.github/keepalive/: heartbeat.txt
.github/workflows/: artificial-analysis-daily.yml  compute-availability-daily.yml  github-trending-daily.yml  llm-benchmarks-weekly.yml  openrouter-apps-daily.yml  openrouter-provider-activity-daily.yml  (+5 more)
.playwright-mcp/: page-2026-04-15T16-39-31-915Z.yml  page-2026-04-15T16-39-33-934Z.yml  page-2026-04-15T16-39-46-487Z.yml  page-2026-04-15T16-39-48-509Z.yml  page-2026-04-15T16-39-55-100Z.yml  page-2026-04-15T16-40-04-619Z.yml  page-2026-04-15T16-40-36-765Z.yml  page-2026-04-15T16-40-50-535Z.yml  page-2026-04-15T16-40-57-405Z.yml  page-2026-04-15T16-41-19-614Z.yml  page-2026-04-15T16-43-18-891Z.yml  page-2026-04-15T16-43-32-482Z.yml
.streamlit/: config.toml
dashboard/: __init__.py  app.py  checks.py  data.py
notebooks/: 00_data_catalog.ipynb  01_weekly_openrouter_usage.ipynb  02_provider_daily_economics.ipynb  03_frontier_intelligence_dynamics.ipynb  04_openrouter_daily_timeseries_validation.ipynb
scratch/: activity_payload.txt  browse.html  debug_revenue_math.py  extract_top_50.py  fetch_or.py  memory_demand_brainstorm.md  patch_hybrid.py  patch_hybrid_slice.py  rankings.html  validate_missing.py  verify_loading.py
scripts/: validate_extraction.py
src/: openrouter_revenue.py  pricing_model_aliases.py  supplement_pricing.py
tests/: conftest.py  test_apps_pipeline.py  test_artificial_analysis_pipeline.py  test_compute_availability_openrouter.py  test_dashboard_data.py  test_github_trending_storage.py  test_openrouter_activity_pipeline.py  test_provider_adoption_pipeline.py  test_rankings_pipeline.py  test_research_data.py  test_research_notebooks.py  test_semiconductor_memory_adata.py  test_semiconductor_memory_pipeline.py
(+154822 files in other folders)
