[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openrouter-alternative-data"
version = "0.1.0"
description = "OpenRouter rankings ingestion pipeline for alternative data research."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "pandas>=2.2",
  "playwright>=1.52",
  "pyarrow>=16.0.0",
  "requests>=2.32",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[project.scripts]
openrouter-data = "openrouter_data.cli:main"
github-trending-data = "github_trending_data.cli:main"
provider-adoption-data = "provider_adoption_data.cli:main"
semiconductor-memory-data = "semiconductor_memory_data.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
